2008-06-13  Badlop  <badlop@process-one.net>

	* doc/guide.tex: Table of listener modules converted to
	description. Table of modules overview simplified, and module
	names link to their sections. Document
	ldap_local_filter (EJAB-179)

	* doc/guide.html: Regenerated with all the latest changes

2008-06-12  Badlop  <badlop@process-one.net>
	
	* doc/guide.tex: Permanent reference URL for sections (EJAB-651).
	Changes in CSS: verbatim text is indented and has grey background;
	descriptions are indented; table borders are softer. Fix
	indentation of verbatim text.

2008-06-08  Badlop  <badlop@process-one.net>

	* doc/guide.tex: Small fixes (thanks to Christoph Anton Mitterer)
	* doc/introduction.tex: Likewise
	* doc/guide.html: Likewise

2008-06-05  Badlop  <badlop@process-one.net>

	* doc/guide.tex: Document ejabberdctl status code (EJAB-633)
	* doc/guide.html: Likewise

2008-06-04  Badlop  <badlop@process-one.net>

	* src/msgs/pl.msg: Bugfix in arguments of translated string that
	could crash the room (thanks to Anastasia Gornostaeva)

2008-05-31  Badlop  <badlop@process-one.net>

	* src/web/ejabberd_web.erl (make_xhtml/2): Allow to include
	elements in the HTTP header

	* src/odbc/odbc_queries.erl (del_user_return_password): Return
	password (thanks to Oleg Palij)

2008-05-22  Badlop  <badlop@process-one.net>

	* README: R12 support: remove compilation warning (EJAB-630)

2008-05-19  Badlop  <badlop@process-one.net>

	* doc/guide.html: Updated
	* doc/dev.html: Likewise
	* doc/features.html: Likewise
	* doc/version.tex: Likewise

	* src/ejabberd.hrl: Version is 2.0.x

	* src/configure.ac: R12 support: remove compilation
	warning (EJAB-630)
	* src/configure: Likewise
	* doc/guide.tex: Likewise

	* doc/guide.tex: Describe how to disable registration
	limitation (EJAB-614)

2008-05-16  Christophe Romain <christophe.romain@process-one.net>

	* src/ejabberd_receiver.erl: Don't activate a socket untill its
	receiver process is controlling it (Thanks to Aleksey)
